<resources>
    <string name="app_name">AppSocialFirma</string>
    <string name="result_signup"> Nome: %1$s \nCognome: %2$s \nSesso: %3$s \nTelefono: %4$s \nEmail: %5$s</string>
    <string name="delete_menu">Cancella</string>
    <string name="delete_form_ok">Form cancellata</string>
    <string name="negative">No</string>
    <string name="positive">Si</string>
    <string name="attention">Attenzione</string>
    <string name="confirm_question">Sei sicuro di voler cancellare tutti i dati?</string>
    <string name="ok">Ok</string>
    <string name="close">Chiudi</string>
    <string name="lashmaker">AppSocialFirma</string>
    <string name="sign_in">Accedi</string>
    <string name="hi">Ciao! Bentornato.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Non hai un account?</string>
    <string name="sign_up_main">Registrati!</string>
    <string name="forgot_pass">Hai dimenticato \nla password?</string>
    <string name="sign_up">Registrati</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="bdDate">Data di nascita</string>
    <string name="gender">Sesso</string>
    <string name="male">Maschio</string>
    <string name="female">Femmina</string>
    <string name="other">Altro</string>
    <string name="telephone">Telefono</string>
    <string name="repeatPass">Ripeti la password</string>
    <string name="agree_conditions">Accetto i termini e le condizioni</string>
    <string name="example_mail">example@mail.com</string>
    <string name="hint_pass">* * * * * * * *</string>
    <string name="continue_b">REGISTRATI</string>
    <string name="insert_email">Inserisci la tua email per recuperare la tua password</string>
    <string name="send">Invia</string>
    <string name="date">01/01/1990</string>
    <string name="img_long">Hai premuto a lungo l\'immagine!</string>
    <string name="error_Name">Il nome puo\' contenere solo le lettere minimo 3 caratteri</string>
    <string name="error_SurName">Il cognome puo\' contenere solo le lettere minimo 3 caratteri </string>
    <string name="error_phone">Il numero di telefono puo\' contenere solo i numeri e \'+\'</string>
    <string name="error_email">I campo email non valido</string>
    <string name="error_pass">La password deve essere di lunghezza minima di 8 caratteri e contenere almeno una lettere maiuscola, una lettera minuscola e il carattere speciale</string>
    <string name="pass_norepeat">Le password non coincidano</string>
    <string name="accept_cond">Bisogna accettare le condizioni!</string>
    <string name="email_noValid">Email non valida</string>
    <string name="edit">Modifica</string>
    <string name="control_email">Controlla la tua posta elettronica, ti abbiamo inviato un email con la password temporanea. La puoi cambiare in qualsiasi momento nelle impostazioni dell\'account.</string>
    <string name="success_sending">L\'email e\' stato inviato con successo</string>
    <string name="selected_item">Selezionato: </string>
    <string name="logo">Logo lashmaker</string>
    <string name="banner">banner</string>
    <string name="summary">Riepilogo</string>
    <string name="find">Cerca</string>
    <string name="open">Apri</string>
    <string name="exit">Chiudi</string>
    <string name="loading">Caricamento....</string>
    <string name="title_activity_ask">AskActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_setting">Ciao sei nel fragment Setting</string>
    <string name="hello_blank_fragment_report">Ciao sei nel fragment Report</string>
    <string name="validate_data_nascita">Data di nascita non valido!!"</string>
    <string name="error_text_messaggio">Il campo messaggio non puo\'essere vuoto"</string>
    <string name="error_gender">Devi selezionare il genere"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="title_activity_setting_app">SettingAppActivity</string>
</resources>