<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_firma" />

        <TextView
            android:id="@+id/companyname"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="3dp"
            android:text="@string/lashmaker"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/textsignin"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyname" />

        <TextView
            android:id="@+id/hi"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/hi"
            android:textColor="#004471"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textsignin" />

        <TextView
            android:id="@+id/textemail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/email"
            android:textColor="#004471"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hi"/>

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/example_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textemail"
            android:autofillHints="emailAddress"/>

        <TextView
            android:id="@+id/textpassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="#004471"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailaddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textpassword"
            android:autofillHints="password"/>


        <Button
            android:id="@+id/buttonsignin"
            android:layout_width="250dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#004471"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/noaccount"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_account"
            android:textAlignment="viewStart"
            android:textSize="13sp"
            android:textColor="#C51315"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toTopOf="@+id/registrati"
            app:layout_constraintEnd_toStartOf="@+id/forgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonsignin" />

        <TextView
            android:id="@+id/registrati"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/sign_up_main"
            android:textAlignment="viewStart"
            android:textColor="#004471"
            android:textSize="14sp"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/forgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noaccount" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_pass"
            android:textAlignment="viewStart"
            android:textColor="#004471"
            android:textSize="14sp"
            android:layout_marginEnd="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noaccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonsignin"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>