<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotpassActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/forgot_pass"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/insert_email"
            android:textColor="#004471"/>

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#004471"
            android:textSize="15sp"
            android:labelFor="@+id/inputEmailForgot"/>

        <EditText
            android:id="@+id/inputEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:importantForAccessibility="no"
            android:autofillHints="emailAddress"/>

        <Button
            android:id="@+id/buttonForgot"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#004471"
            android:text="@string/send"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>